create github pages

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://m.me/373944116747488" target="_blank">
+                    <a class="nav-link link text-white display-4" href="https://www.facebook.com/streetwisdomreborn/" target="_blank">
                         <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         About Me &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a>
                 </li></ul>
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best website templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -72,7 +72,7 @@
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
                     to support the growth and expansion of the <br>Modern Day Movement &nbsp;of Jesus Christ<br>here in Cebu and the entire Visayas.<br><br>We are continuously growing in numbers<br>and needs continuous flow of funds<br>for the growing financial needs of<br>a Church that is bringing much hope to<br>the hurting world.</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="index.html#header5-3">Read More</a>
-                    <a class="btn btn-md btn-success display-4" href="https://m.me/373944116747488" target="_blank">Facebook Me</a></div>
+                    <a class="btn btn-md btn-success display-4" href="http://pmme.xyz/fb" target="_blank">Facebook Me</a></div>
             </div>
         </div>
     </div>
