--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
-  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="stylesheet" href="assets/gallery/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
@@ -58,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/e">make your own site</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -196,17 +197,34 @@
     </div>
 </section>
 
+<section class="mbr-gallery mbr-slider-carousel cid-rhGcBOvX4R" id="gallery3-3">
+
+    
+
+    <div>
+        <div><!-- Filter --><!-- Gallery --><div class="mbr-gallery-row"><div class="mbr-gallery-layout-default"><div><div><div class="mbr-gallery-item mbr-gallery-item--p3" data-video-url="false" data-tags="Awesome"><div href="#lb-gallery3-3" data-slide-to="0" data-toggle="modal"><img src="assets/images/img-20180819-145928-2000x1500-800x600.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p3" data-video-url="false" data-tags="Responsive"><div href="#lb-gallery3-3" data-slide-to="1" data-toggle="modal"><img src="assets/images/img-20180905-185514-2000x1127-800x451.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p3" data-video-url="false" data-tags="Creative"><div href="#lb-gallery3-3" data-slide-to="2" data-toggle="modal"><img src="assets/images/img-20180909-180526-2000x2667-800x1067.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p3" data-video-url="false" data-tags="Animated"><div href="#lb-gallery3-3" data-slide-to="3" data-toggle="modal"><img src="assets/images/img-20180909-201220-2000x1500-800x600.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p3" data-video-url="false" data-tags="Awesome"><div href="#lb-gallery3-3" data-slide-to="4" data-toggle="modal"><img src="assets/images/img-20181002-162913-2000x1842-800x737.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p3" data-video-url="false" data-tags="Awesome"><div href="#lb-gallery3-3" data-slide-to="5" data-toggle="modal"><img src="assets/images/img-20180819-171754-2000x1129-800x452.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p3" data-video-url="false" data-tags="Responsive"><div href="#lb-gallery3-3" data-slide-to="6" data-toggle="modal"><img src="assets/images/img-20181002-163127-2000x1544-800x618.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p3" data-video-url="false" data-tags="Animated"><div href="#lb-gallery3-3" data-slide-to="7" data-toggle="modal"><img src="assets/images/img-20180616-112406-2000x1500-800x600.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p3" data-video-url="false" data-tags="Awesome"><div href="#lb-gallery3-3" data-slide-to="8" data-toggle="modal"><img src="assets/images/img-20180616-112444-2000x1500-800x600.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p3" data-video-url="false" data-tags="Awesome"><div href="#lb-gallery3-3" data-slide-to="9" data-toggle="modal"><img src="assets/images/img-20180622-203016-2000x1500-800x600.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p3" data-video-url="false" data-tags="Awesome"><div href="#lb-gallery3-3" data-slide-to="10" data-toggle="modal"><img src="assets/images/img-20180708-150532-2000x2747-800x1099.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p3" data-video-url="false" data-tags="Awesome"><div href="#lb-gallery3-3" data-slide-to="11" data-toggle="modal"><img src="assets/images/img-20180810-204038-2000x1127-800x451.jpg" alt="" title=""><span class="icon-focus"></span></div></div></div></div><div class="clearfix"></div></div></div><!-- Lightbox --><div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery3-3"><div class="modal-dialog"><div class="modal-content"><div class="modal-body"><div class="carousel-inner"><div class="carousel-item active"><img src="assets/images/img-20180819-145928-2000x1500.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/img-20180905-185514-2000x1127.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/img-20180909-180526-2000x2667.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/img-20180909-201220-2000x1500.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/img-20181002-162913-2000x1842.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/img-20180819-171754-2000x1129.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/img-20181002-163127-2000x1544.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/img-20180616-112406-2000x1500.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/img-20180616-112444-2000x1500.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/img-20180622-203016-2000x1500.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/img-20180708-150532-2000x2747.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/img-20180810-204038-2000x1127.jpg" alt="" title=""></div></div><a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#lb-gallery3-3"><span class="mbri-left mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#lb-gallery3-3"><span class="mbri-right mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Next</span></a><a class="close" href="#" role="button" data-dismiss="modal"><span class="sr-only">Close</span></a></div></div></div></div></div>
+    </div>
+
+</section>
+
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
+  <script src="assets/masonry/masonry.pkgd.min.js"></script>
+  <script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
+  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/theme/js/script.js"></script>
+  <script src="assets/gallery/player.min.js"></script>
+  <script src="assets/gallery/script.js"></script>
+  <script src="assets/slidervideo/script.js"></script>
   
   
   <input name="animation" type="hidden">
